(fix) remove visible input and fix style encapsulation

--- a/src/app/modules/newsfeed/activity/boost-button/boost-button.component.scss
+++ b/src/app/modules/newsfeed/activity/boost-button/boost-button.component.scss
@@ -1,4 +1,4 @@
-m-tooltip .m-tooltip--bubble {
+.m-boostButton__tooltip .m-tooltip--bubble {
   right: 0;
   width: 400px;
   bottom: 35px !important;
